fixed spacing, added more content to schedule footer

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -21,6 +21,7 @@ p {
     margin: 0;
     padding-bottom: 20px;
 }
+
 ul, 
 a {
     display: flex;
@@ -90,7 +91,7 @@ button {
     font-size: 20px;
 }
 
-.quote-contaner {
+.quote-container {
     display: flex;
     background-color: #e5e7eb;
     font-size: 32px;
@@ -111,6 +112,16 @@ button {
     display: flex;
     font-size: 23px;
     font-weight: bold;
-
-
 }
+
+.schedule-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    margin: 20px;
+}
+
+
+
+
